--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		
 		<title>RT United - Portfólio</title>
 		
-
+		<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+		
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/cayman.css">
@@ -27,25 +28,26 @@
 
 		  
 		<section class="main-content">
-		  <dl>
-			  <dt><a href="https://rtunited.github.io/hotsite" title="Hotsite">Hotsite</a></dt>
-			  <dd>Um hotsite é feito para divulgar uma promoção, geralmente tem um prazo determinado para ficar no ar. O marketing direcionado pode trazer mais visibilidade para a empresa e para a promoção, quando feitos do jeito certo.</dd>
-			  <hr>
-			  <dt>Single page</dt>
-			  <dd>---</dd>
-			  <hr>
-			  <dt>e-Commerce</dt>
-			  <dd>---</dd>
-			  <hr>
-			  <dt>Blog informativo</dt>
-			  <dd>---</dd>
+			<dl>
+				<dt><a href="https://rtunited.github.io/hotsite" title="Hotsite">Hotsite</a></dt>
+				<dd>Um hotsite é feito para divulgar uma promoção, geralmente tem um prazo determinado para ficar no ar. O marketing direcionado pode trazer mais visibilidade para a empresa e para a promoção, quando feitos do jeito certo.</dd>
+				<hr>
+				<dt>Single page</dt>
+				<dd>Sites com todo seu conteúdo em apenas uma página. Geralmente servem como landing page para uma empresa ou produto, e não são destinados ao comércio, apenas para apresentação. Podem estar ligados a uma plataforma de vendas externa.</dd>
+				<hr>
+				<dt>e-Commerce</dt>
+				<dd>Sites cujo foco está na venda de produtos. Possuem tecnologias integradas relacionadas ao comércio, como validação de cartões, certificados de segurança etc.</dd>
+				<hr>
+				<dt>Blog/Site informativo</dt>
+				<dd>Um blog ou site de empresa que contenha várias páginas com artigos ou produtos. O objetivo é informar o leitor. Costuma receber atualizações periódicas.</dd>
 
-		  </dl>
+			</dl>
 
 		  
 
 		  <footer class="site-footer">
-			<span class="site-footer-owner">Adaptado do tema <a href="https://github.com/jasonlong/cayman-theme">Cayman</a>, criado por <a href="https://github.com/jasonlong">jasonlong</a>.</span>
+			&copy; 2017 RT United.
+			<span class="site-footer-owner">Adaptado do tema <a href="https://github.com/jasonlong/cayman-theme">Cayman</a> (criado por <a href="https://github.com/jasonlong">jasonlong</a>).</span>
 		  </footer>
 
 		</section>
