Modificação dos textos e últimos acertos

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 		<meta name="description" content="Página principal do portfólio">
 		<meta name="author" content="RT Informática">
 		
-		<title>RT United - Portfólio</title>
+		<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+		
 		
 		<link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
 		
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/cayman.css">
+		
+		<title>RT United - Portfólio</title>
 
 	</head>
 	<body>
@@ -21,19 +25,15 @@
 			<h2 class="project-tagline">Portfólio</h2>
 		  
 		</section>
+
 		
-
-
-
-
-		  
 		<section class="main-content">
 			<dl>
 				<dt><a href="https://rtunited.github.io/hotsite" title="Hotsite">Hotsite</a></dt>
-				<dd>Um hotsite é feito para divulgar uma promoção, geralmente tem um prazo determinado para ficar no ar. O marketing direcionado pode trazer mais visibilidade para a empresa e para a promoção, quando feitos do jeito certo.</dd>
+				<dd>Um hotsite é feito para divulgar uma promoção e geralmente tem um prazo determinado para ficar no ar. O marketing direcionado a uma página específica pode trazer mais visibilidade para a empresa e para a promoção, quando feito do jeito certo.</dd>
 				<hr>
-				<dt>Single page</dt>
-				<dd>Sites com todo seu conteúdo em apenas uma página. Geralmente servem como landing page para uma empresa ou produto, e não são destinados ao comércio, apenas para apresentação. Podem estar ligados a uma plataforma de vendas externa.</dd>
+				<dt><a href="https://rtunited.github.io/single-page" title="Single page">Single page</a></dt>
+				<dd>Sites com todo seu conteúdo em apenas uma página. Geralmente servem como landing page (página inicial) para uma empresa ou produto, e não são destinados ao comércio, apenas para apresentação. Podem estar ligados a uma plataforma de vendas externa.</dd>
 				<hr>
 				<dt>e-Commerce</dt>
 				<dd>Sites cujo foco está na venda de produtos. Possuem tecnologias integradas relacionadas ao comércio, como validação de cartões, certificados de segurança etc.</dd>
@@ -48,6 +48,10 @@
 		  <footer class="site-footer">
 			&copy; 2017 RT United.
 			<span class="site-footer-owner">Adaptado do tema <a href="https://github.com/jasonlong/cayman-theme">Cayman</a> (criado por <a href="https://github.com/jasonlong">jasonlong</a>).</span>
+			
+			<a class="redes-sociais" href="https://plus.google.com/113928685904155680335/about" target="_blank" title="Google+">
+				<img src="img/g+.png" alt="Google+" title="Google+">
+			</a>
 		  </footer>
 
 		</section>
