Adição de texto inicial

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
 		
 		<section class="main-content">
+		
+			<p>
+				<strong><span class="destaque-inicio">Olá!</span></strong><br>
+				RTUNITED.GITHUB.IO foi construído por <span class="destaque-nome">Rita Menezes</span> e <span class="destaque-nome">Thiago Santos</span>, técnicos em Informática pelo SENAC-RJ. Através dessa iniciativa, tentamos divulgar nosso trabalho e nos aproximar de nossos clientes, nos aprimorando cada vez mais como profissionais de Informática.
+			</p>
+
+			<p>
+				<span class="destaque-nome">Rita Menezes</span> está cursando Bacharelado em Sistemas de Informação pela UNIRIO - Universidade Federal do Estado do Rio de Janeiro.<br>
+				<span class="destaque-nome">Thiago Santos</span> atualmente estagia na IplanRio - Empresa Municipal de Informática.
+			</p>
+		
+			<hr>
+		
 			<dl>
 				<dt><a href="https://rtunited.github.io/hotsite" title="Hotsite">Hotsite</a></dt>
 				<dd>Um hotsite é feito para divulgar uma promoção e geralmente tem um prazo determinado para ficar no ar. O marketing direcionado a uma página específica pode trazer mais visibilidade para a empresa e para a promoção, quando feito do jeito certo.</dd>
@@ -35,10 +48,10 @@
 				<dt><a href="https://rtunited.github.io/single-page" title="Single page">Single page</a></dt>
 				<dd>Sites com todo seu conteúdo em apenas uma página. Geralmente servem como landing page (página inicial) para uma empresa ou produto, e não são destinados ao comércio, apenas para apresentação. Podem estar ligados a uma plataforma de vendas externa.</dd>
 				<hr>
-				<dt>e-Commerce</dt>
+				<dt>e-Commerce <span class="em-breve">Em breve!</span></dt>
 				<dd>Sites cujo foco está na venda de produtos. Possuem tecnologias integradas relacionadas ao comércio, como validação de cartões, certificados de segurança etc.</dd>
 				<hr>
-				<dt>Blog/Site informativo</dt>
+				<dt>Blog/Site informativo <span class="em-breve">Em breve!</span></dt>
 				<dd>Um blog ou site de empresa que contenha várias páginas com artigos ou produtos. O objetivo é informar o leitor. Costuma receber atualizações periódicas.</dd>
 			</dl>
 
